--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@ layout: default
 title: Contact
 ---
 <div class="blurb">
-	<h1>Contact</h1>
+	<h1>T Coomar</h1>
 	<br/>
 	<p>
-		<a href="tel:+919731005417">+91 97310 05417</a> | 
-		<a href="mailto:tancoomar@gmail.com">tancoomar@gmail.com</a>
+		Lorem Ipsum
 	</p>
 </div>
